<resources>
    <!-- VISIBLE TEXT RESOURCES -->
    <string name="app_name">DOAHA</string>
    <string name="title_current_location">Viewed Location:</string>
    <string name="title_notification_toggle">Notification Toggle</string>
    <string name="title_disclaimer">Disclaimer:</string>
    <string name="splash_disclaimer_deceased">"Aboriginal and Torres Strait Islander viewers are advised that this application may contain names and images of people who have since passed away."</string>
    <string name="splash_disclaimer_borders">Borders are not indicative of exact regions due to their transient nature, and are not suitable for native title and other land claims. Names and regions per \'Aboriginal Australia Wall Map\', D R Horton, Aboriginal Studies Press, AIATSIS, 1996. For more specific regional information, please contact the relevant land councils.</string>
    <string name="tool_tip">Tap a region \nfor more \ninformation!</string>
    <string name="button_start">Start!</string>
    <string name="buffer_text">…</string>
    <string name="ack_unavailable">Acknowledgements Unavailable</string>
    <!-- ADMIN DETAILS -->
    <string name="admin_email">doaha2020@gmail.com</string>
    <!-- CHANNEL INFO -->
    <string name="channel_name">Notification Channel</string>
    <string name="channel_description">Notification Description</string>
    <!-- END PLACEHOLDER -->

    <string name="preference_file_key">com.doaha.application.aPreferenceFile</string>
    <string name="notification_key">notificationsEnabled</string>
    <string name="isNationLabelEnabled">isNationLabelEnabled</string>
    <string name="theRegionUserWasPreviouslyIn_key">theRegionUserWasPreviouslyIn</string>
    <string name="XmlImportType">XmlImportType</string>
    <string name="mapStyle">mapStyle</string>
    <string name="id_hint">ID</string>
    <string name="welcome_hint">Welcome</string>
    <string name="ack_hint">Acknowledgements</string>
    <string name="info_hint">Information</string>
    <string name="button_save">Save</string>
    <string name="button_delete">Delete</string>
    <string name="button_edit_db">Edit Nation Info</string>
    <string name="standard_style_poi">Standard Style POI</string>
    <string name="retro_style_poi">Retro Style POI</string>
    <string name="silver_style_poi">Silver Style POI</string>
    <string name="edit_id">ID:</string>
    <string name="edit_welcome_message">Welcome Message:</string>
    <string name="edit_acknowledgments">Acknowledgments:</string>
    <string name="edit_nation_information">Nation Information:</string>
    <string name="toolTip_used">unused</string>
    <string name="resource_credits">Resources &amp; Credits</string>
    <string name="resources_credits_content">Resources and credits: \n\nData - This applications\'s regional data -as cited above - has been sourced primarily from the Australian Institute for Aboriginal and Torres Strait Islander Studies(AIATSIS)(https://collection.aiatsis.gov.au/), as well as information available from Registered Aboriginal Parties online. \n\n Processes - The processes surrounding acknowledgments and sensitivities in this application have been influenced by AIATSIS(website above), Aboriginal Victoria(https://www.aboriginalvictoria.vic.gov.au/), and the United Nations declaration on the rights of indigenous peoples (https://www.un.org/development/desa/indigenouspeoples/declaration-on-the-rights-of-indigenous-peoples.html) \n\n Special Thanks from the developers go to Dr. Muneera Bano, Graham Farrell, Tom Molyneux, and Craig Molyneux, Heather Fuhrer, for their guidance and expertise.</string>
    <string name="searchHint">Search…</string>
    <string name="search">Search</string>
    <string name="add_document">Add Document</string>
    <string name="go_back">Go Back</string>
    <string name="images">Images</string>
    <string name="id">ID:</string>
    <string name="welcome">Welcome:</string>
    <string name="acknowledgements">Acknowledgements:</string>
    <string name="information">Information:</string>
    <string name="modify_image">Click here to modify Image</string>
    <string name="add_image">Click to add Image</string>
    <string name="image_1">Image 1</string>
    <string name="image_2">Image 2</string>
    <string name="image_3">Image 3</string>
    <string name="update_image">Update Image</string>
    <string name="select_new_image">Select New Image</string>
    <string name="current_image">Current Image</string>
    <string name="choose_image">Choose Image</string>
    <string name="upload_image">Upload Image</string>
    <string name="chosen_image">Chosen Image</string>
    <string name="History">History:</string>
    <string name="elders">Elders:</string>
    <string name="nation_history">Nation History:</string>
    <string name="history">History</string>
    <string name="elders_">Elders</string>
    <string name="registered_aboriginal_party">Registered Aboriginal Party:</string>
    <string name="registered_aboriginal_party_">Registered Aboriginal Party</string>
</resources>
