<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        tools:context=".NewDocActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">
            <EditText
                android:id="@+id/newID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/id_hint"
                android:inputType="textMultiLine"
                android:textColor="#FFFFFF"
                android:textColorHint="#8C8266"
                app:backgroundTint="@color/colorAccent"/>

            <EditText
                android:id="@+id/newWelcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/welcome_hint"
                android:inputType="textMultiLine"
                android:textColor="#FFFFFF"
                android:textColorHint="#8C8266"
                app:backgroundTint="@color/colorAccent"/>

            <EditText
                android:id="@+id/newAck"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ack_hint"
                android:inputType="textMultiLine"
                android:textColor="#FFFFFF"
                android:textColorHint="#8C8266"
                app:backgroundTint="@color/colorAccent"/>

            <EditText
                android:id="@+id/newInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/info_hint"
                android:inputType="textMultiLine"
                android:textColor="#FFFFFF"
                android:textColorHint="#8C8266"
                app:backgroundTint="@color/colorAccent"/>

        </LinearLayout>


</ScrollView>
