<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark"
    tools:context=".UploadImageActivity">

    <Button
        android:id="@+id/chooseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="142dp"
        android:layout_marginEnd="42dp"
        android:text="@string/choose_image"
        app:layout_constraintEnd_toStartOf="@+id/uploadButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/uploadButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="142dp"
        android:layout_marginEnd="60dp"
        android:text="@string/upload_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/chooseButton"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/chosenImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="37dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chooseButton"
        tools:srcCompat="@android:drawable/ic_menu_report_image"
        android:contentDescription="@string/chosen_image" />
</androidx.constraintlayout.widget.ConstraintLayout>