<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".AdminRecycler"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <AutoCompleteTextView
            android:id="@+id/search_bar"
            android:layout_width="wrap_content"
            android:layout_alignParentStart="true"
            android:paddingStart="16dp"
            android:paddingEnd="0dp"
            android:layout_height="64dp"
            android:hint="@string/searchHint"
            android:maxLines="1"
            android:inputType="text"
            android:layout_toStartOf="@id/searchBtn"
            android:textColorHint="#8C8266"
            android:textColor="@color/colorText"
            app:backgroundTint="@color/colorAccent"/>

        <ImageView
            android:id="@+id/searchBtn"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:paddingTop="15dp"
            app:srcCompat="@drawable/ic_baseline_search_24"
            android:contentDescription="@string/search" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_below="@id/search_bar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom" />

    </RelativeLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_add_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:src="@drawable/ic_add"
        android:contentDescription="@string/add_document" />



</androidx.coordinatorlayout.widget.CoordinatorLayout>